[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/UntitledValley/Enemy/Wolf/Animation/Frames.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Scenes/UntitledValley/Enemy/Wolf/Scripts/Wolf.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 80.0001
height = 79.9997

[sub_resource type="CircleShape2D" id=2]
radius = 800.0

[sub_resource type="CircleShape2D" id=3]
radius = 180.0

[node name="Wolf" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 4
collision_mask = 9
script = ExtResource( 2 )
life_num = 5
speed = 200.0
jump_force = 600.0
speed_slow_mode_rate = 0.75
jumpforce_slow_mode_rate = 0.3

[node name="WolfShape" type="CollisionShape2D" parent="."]
position = Vector2( 20, 20 )
rotation = 1.57079
shape = SubResource( 1 )

[node name="FindArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="FindAreaShape" type="CollisionShape2D" parent="FindArea"]
shape = SubResource( 2 )

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="AttackAreaShape" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource( 3 )

[node name="Animation" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "idle"

[node name="AttackHardTimer" type="Timer" parent="."]
one_shot = true

[node name="ShootHardTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackABHardTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackedHardTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackBNepTimer" type="Timer" parent="."]
one_shot = true

[node name="FlashCheckTimer" type="Timer" parent="."]
one_shot = true

[node name="FlashHardTimer" type="Timer" parent="."]
one_shot = true

[node name="KillCheckTimer" type="Timer" parent="."]
one_shot = true

[node name="HeartLessCheckTimer" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="FindArea" to="." method="_on_FindArea_area_entered"]
[connection signal="area_exited" from="FindArea" to="." method="_on_FindArea_area_exited"]
[connection signal="area_entered" from="AttackArea" to="." method="_on_AttackArea_area_entered"]
[connection signal="area_exited" from="AttackArea" to="." method="_on_AttackArea_area_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_AttackArea_body_exited"]
[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
[connection signal="frame_changed" from="Animation" to="." method="_on_Animation_frame_changed"]
[connection signal="timeout" from="AttackHardTimer" to="." method="_on_AttackHardTimer_timeout"]
[connection signal="timeout" from="ShootHardTimer" to="." method="_on_ShootHardTimer_timeout"]
[connection signal="timeout" from="AttackABHardTimer" to="." method="_on_AttackABHardTimer_timeout"]
[connection signal="timeout" from="AttackedHardTimer" to="." method="_on_AttackedHardTimer_timeout"]
[connection signal="timeout" from="AttackBNepTimer" to="." method="_on_AttackBNepTimer_timeout"]
[connection signal="timeout" from="FlashCheckTimer" to="." method="_on_FlashCheckTimer_timeout"]
[connection signal="timeout" from="FlashHardTimer" to="." method="_on_FlashHardTimer_timeout"]
[connection signal="timeout" from="KillCheckTimer" to="." method="_on_KillCheckTimer_timeout"]
[connection signal="timeout" from="HeartLessCheckTimer" to="." method="_on_HeartLessCheckTimer_timeout"]
